--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,3 +9,5 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
+URL: https://github.com/erikaris/rplaywright
+BugReports: https://github.com/erikaris/rplaywright/issues
