--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: rplaywright
-Title: A seamless bridge with the NodeJS library, Playwright
+Title: RPlaywright: Bridging R and Playwright for Web Testing and Automation
 Version: 0.0.0.9000
 Authors@R: 
     person("Erika", "Siregar", , "erika.mukhlisina@example.com", role = c("aut", "cre"),
            comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
+Description: Provides a seamless integration between R and the Playwright library, facilitating web testing and automation tasks. This package empowers users to efficiently interact with Playwright functionalities within the R environment, enabling comprehensive web testing and automation workflows.
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
