--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,3 +11,8 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
 URL: https://github.com/erikaris/rplaywright
 BugReports: https://github.com/erikaris/rplaywright/issues
+Imports: 
+    httr,
+    processx,
+    R.utils,
+    yesno
