--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,5 +18,7 @@ Imports:
     yesno
 Suggests: 
     knitr,
-    rmarkdown
+    rmarkdown,
+    testthat (>= 3.0.0)
 VignetteBuilder: knitr
+Config/testthat/edition: 3
