--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(rplaywright_page_new)
 export(rplaywright_page_screenshot)
 export(rplaywright_page_scrollto)
 export(rplaywright_page_scrolltobottom)
+export(rplaywright_page_scrolltoright)
 export(rplaywright_page_set_content)
 export(rplaywright_page_waitforresponse)
 export(rplaywright_page_waitfortimeout)
