--- a/inst/node/package.json
+++ b/inst/node/package.json
@@ -10,7 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "args-parser": "^1.3.0",
     "fastify": "^4.26.2",
+    "fastify-list-routes": "^1.0.0",
+    "lodash": "^4.17.21",
     "nodemon": "^3.1.0",
     "playwright": "^1.42.1",
     "playwright-chromium": "^1.42.1",
