--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: rplaywright
 Title: RPlaywright: Bridging R and Playwright for Web Testing and Automation
-Version: 0.0.0.9000
+Version: 1.42.1
 Authors@R: 
     person("Erika", "Siregar", , "erika.mukhlisina@gmail.com", role = c("aut", "cre"),
            comment = c(ORCID = "YOUR-ORCID-ID"))
@@ -18,7 +18,8 @@ Imports:
     yesno,
     future,
     logger,
-    R6
+    R6,
+    crayon
 Suggests: 
     knitr,
     rmarkdown,
