--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Title: RPlaywright: Bridging R and Playwright for Web Testing and Automation
 Version: 1.42.1
 Authors@R: 
     person("Erika", "Siregar", , "erika.mukhlisina@gmail.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
+           comment = c(ORCID = "https://orcid.org/0009-0005-6323-1177"))
 Description: Provides a seamless integration between R and the Playwright library, facilitating web testing and automation tasks. This package empowers users to efficiently interact with Playwright functionalities within the R environment, enabling comprehensive web testing and automation workflows.
 License: MIT + file LICENSE
 Encoding: UTF-8
